Lesson 4: create appeals api controller & docs
