# backend_fefu_3_6/api-docs.json
@@ -10,6 +10,66 @@
         }
     ],
     "paths": {
+        "\/api\/appeals": {
+            "post": {
+                "tags": [
+                    "appeals"
+                ],
+                "summary": "Display the specified resource.",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "Name",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "maxLength": 100
+                        },
+                        "example": "User"
+                    },
+                    {
+                        "name": "phone",
+                        "in": "query",
+                        "description": "Phone",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "88005553535"
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "Email",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "User@gmail.com"
+                    },
+                    {
+                        "name": "message",
+                        "in": "query",
+                        "description": "Message",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "maxLength": 1000
+                        },
+                        "example": "Message"
+                    }
+                ],
+                "responses": {
+                    "422": {
+                        "$ref": "#\/components\/responses\/ErrorValidation"
+                    },
+                    "200": {
+                        "$ref": "#\/components\/responses\/"
+                    }
+                }
+            }
+        },
         "\/api\/news": {
             "get": {
                 "tags": [
@@ -40,9 +100,6 @@
                                 }
                             }
                         }
-                    },
-                    "404": {
-                        "description": "Not found"
                     }
                 }
             }
@@ -115,9 +172,6 @@
                                 }
                             }
                         }
-                    },
-                    "404": {
-                        "description": "Not found"
                     }
                 }
             }
@@ -258,6 +312,26 @@
                     }
                 }
             }
+        },
+        "responses": {
+            "ErrorValidation": {
+                "description": "Validation errors",
+                "content": {
+                    "application\/json": {
+                        "schema": {
+                            "type": "array",
+                            "example": {
+                                "name": [
+                                    "Something is wrong with this field!"
+                                ]
+                            }
+                        }
+                    }
+                }
+            },
+            "": {
+                "description": "Successful response"
+            }
         }
     },
     "tags": [
@@ -268,6 +342,10 @@
         {
             "name": "pages",
             "description": "Pages"
+        },
+        {
+            "name": "appeals",
+            "description": "Appeals"
         }
     ]
 }
